examples/canary-project/src/bad/consumer-b.ts
import { hub } from './hub.js'
export const consumer_b = (): string => hub()
